--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "depcheck": "^1.4.3",
     "eslint": "^8.38.0",
+    "prettier": "^2.8.8",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
