--- a/.github/workflows/verify-and-deploy.yml
+++ b/.github/workflows/verify-and-deploy.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Deploy
         uses: bitovi/github-actions-deploy-serverless-website@main
-        if: github.ref == 'refs/heads/main'
+        #if: github.ref == 'refs/heads/main'?
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID_SANDBOX}}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY_SANDBOX}}
