--- a/.github/workflows/verify-and-deploy.yml
+++ b/.github/workflows/verify-and-deploy.yml
@@ -45,7 +45,7 @@ jobs:
           tf_state_bucket_destroy: true
           
           aws_spa_cdn_enabled: true
-          aws_spa_source_folder: '../../dist'
+          aws_spa_source_folder: ./dist
           
           aws_r53_domain_name:
           aws_r53_sub_domain_name:
